force-app/main/default/objects/Youtube_Video_Detail__c/Youtube_Video_Detail__c.object-meta.xml
<CustomObject>
    <label>Youtube Video Detail</label>
    <nameField>
        <label>Video Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Youtube Video Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>