force-app/main/default/objects/Youtube_Video_Detail__c/fields/Number_of_Like__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Like__c</fullName>
    <label>Number of Like</label>
    <type>TextArea</type>
</CustomField>