force-app/main/default/objects/Youtube_Video_Detail__c/fields/Number_of_View__c.field-meta.xml
<CustomField>
    <fullName>Number_of_View__c</fullName>
    <label>Number of View</label>
    <type>TextArea</type>
</CustomField>