force-app/main/default/objects/Youtube_Video_Detail__c/fields/Video_Id__c.field-meta.xml
<CustomField>
    <fullName>Video_Id__c</fullName>
    <label>Video Id</label>
    <type>TextArea</type>
</CustomField>