force-app/main/default/objects/Youtube_Video_Detail__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Video_Id__c</columns>
    <columns>Number_of_Like__c</columns>
    <columns>Number_of_View__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>